--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - run: echo Hello from Job1
+      - run: echo "Hello from Job1"
   job2:
     needs: job1
     runs-on: ubuntu-latest
