--- a/.github/workflows/matrix-multi-os.yaml
+++ b/.github/workflows/matrix-multi-os.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-lates,windows-latest,macos-latest]
+        os: [ubuntu-latest,windows-latest,macos-latest]
     steps:
       - name: Show values
         run:
