--- a/.github/workflows/matrix-docker.yaml
+++ b/.github/workflows/matrix-docker.yaml
@@ -2,11 +2,11 @@ name: Docker Matrix
 on: workflow_dispatch
 jobs:
   deploy:
-    runs-on: ${{ matrix.os }}
+    runs-on: u
     strategy:
       matrix:
-        os: [ubuntu-latest, ubuntu-20.04,windows-latest]
-        images: [hello-world,alpine]
+        os: [ubuntu-latest, ubuntu-20.04, windows-latest]
+        images: [hello-world, alpine]
     steps:
       - name: Docker details
         run: docker info
