--- a/.github/workflows/matrix-docker.yaml
+++ b/.github/workflows/matrix-docker.yaml
@@ -2,7 +2,7 @@ name: Docker Matrix
 on: workflow_dispatch
 jobs:
   deploy:
-    runs-on: ub
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, ubuntu-24.04, windows-latest]
