--- a/.github/workflows/self-hosted-runner.yml
+++ b/.github/workflows/self-hosted-runner.yml
@@ -15,3 +15,6 @@ jobs:
 
       - name: Check disk usage details
         run: df -h
+
+      - name: Check instance IP details
+        run: ip adddr show
